--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Syaiful Rahmatdani</h1>
   <a href="home.html">Home</a>
-  <img src="https://lh3.googleusercontent.com/a/ACg8ocKfl6Wa1JlSVbH8_fbjC9XIV_0IzIwimgLWjWRDuGya1Q=s192-c-mo" alt="" srcset="">
+  <!-- <img src="https://lh3.googleusercontent.com/a/ACg8ocKfl6Wa1JlSVbH8_fbjC9XIV_0IzIwimgLWjWRDuGya1Q=s192-c-mo" alt="" srcset=""> -->
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi amet veritatis facilis consectetur numquam repudiandae impedit similique reiciendis unde fugit molestias culpa enim neque adipisci hic quaerat, architecto ipsum dolorum ducimus quisquam saepe animi inventore. Ratione, saepe beatae laborum ut quae nesciunt facilis! Unde maxime distinctio minus sequi dolor eos dicta, modi sapiente odit beatae, et molestias iste doloribus excepturi placeat adipisci sint blanditiis? Fuga quis blanditiis saepe repudiandae accusantium illo veritatis deserunt iusto numquam totam voluptate nobis repellendus, beatae ratione delectus nisi, provident tenetur ad voluptatum! Nesciunt natus porro quia, voluptatum, totam laboriosam quae molestiae ex dolores ut qui?</p>
 </body>
 </html>
